# fscl-stm32xx-template

./: CMakeLists.txt  README.md  meson.build
code/: meson.build
code/source/: CMakeLists.txt  meson.build
